--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/preset-env": "^7.12.11",
     "babel-node": "^0.0.1-security",
     "dotenv": "^8.2.0",
+    "graphql-tools": "^7.0.2",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
